--- a/eng.css
+++ b/eng.css
@@ -128,7 +128,8 @@ article .intro{
 	transition: transform .5s, box-shadow .5s;
 }
 .galgrid > div > img:hover{
-	transform: scale(1.5);
+	transform: matrix(1.5, 0, 0, 1.5, -5, 0);
+
 	box-shadow: 0px 0px 20px 5px grey;
 }
 .galdiv{
@@ -142,7 +143,7 @@ article .intro{
 	margin-top: 1%;
 }
 .link1{
-	font-size: 22px;
+	font-size: 30px;
 	text-decoration: none;
 	font-family: "Comic Sans MS";
 	color: deepskyblue;
@@ -163,7 +164,7 @@ fieldset{
 }
 input{ 
 	border-radius: 20px;
-	width: 100vh;
+	width: 66vw;
 	height: 8vh;
 	margin-bottom: 5%;
 	float: right;
@@ -173,8 +174,8 @@ input{
 }
 textarea{
 	border-radius: 20px;
-	width: 98vh;
-	max-width: 98vh;
+	width: 66vw;
+	max-width: 66vw;
 	max-height: 50vh;
 	font-size: 16px;
 	padding: 1%;
@@ -196,4 +197,39 @@ button{
 }
 button:hover{
 	background: paleturquoise;
+}
+
+
+
+
+
+@media (min-width: 1920px){
+	nav .menu
+	{
+		font-size: 44px;
+	}
+	article h2
+	{
+		font-size: 70px;
+	}
+	article .intro
+	{
+		font-size: 48px;
+	}
+	.div1
+	{
+		font-size: 34px;
+	}
+	.div2
+	{
+		font-size: 20px;
+	}
+	.galdiv
+	{
+		font-size: 34px;
+	}
+	.link1
+	{
+		font-size: 44px;
+	}
 }
